tests/fixtures/pass/infer_fresh_constructor.sali
let Cell(T: type) = struct(value: T)
let identity(T: type)(move value: T): T = value

let main(): i32 = identity(_)(Cell(i32)(42)).value
