tests/fixtures/fail/box_read_method_resource.sali
let Resource = struct(value: i32)

let main(): i32 = Box.new(Resource(42)).read().value
